# DeskAssist

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  README.md  current-state.md
docs/architecture/: domain-model.md  product-north-star.md  runtime-flows.md  system-overview.md  target-v1-architecture.md
docs/legacy/: ARCHITECTURE_OLD.md  MIGRATED_FROM_LEGACY.md  MIGRATION_BACKLOG.md  README.md
docs/planning/: near-term-execution-plan.md  open-questions.md  roadmap.md
plans/: MILESTONES.md  MILESTONE_M4_5_ASSISTANT_CHARTER.md  MILESTONE_M4_6_CASEFILE_RESET_AND_LANE_EDITING.md  README.md
plans/analyst-workbench/: CHECKLIST.md  CODEBASE_MAP.md  README.md  (+7 more)
tests/: test_assistant_charter.py  test_casefile_reset_and_context_edit.py  test_casefile_reset_and_lane_edit.py  test_casefile_store.py  test_chat_service.py  test_compare.py  test_comparison_chat.py  test_context_access_modes.py  test_context_scoping.py  test_contexts_v2_migration.py  test_electron_bridge.py  test_electron_bridge_dispatch.py  test_export.py  test_filesystem_helpers.py  test_findings_store.py  test_inbox_store.py  test_lane_access_modes.py  test_lane_scoping.py  test_lanes_v2_migration.py  test_notes_store.py  test_policy.py  test_prompts_store.py  test_provider_contract.py  test_providers.py  test_runs_store.py  test_scope_resolution.py  test_smoke.py  test_tools.py  test_workspace_multi_root.py
ui-electron/: eslint.config.mjs  knip.json  main.js  package-lock.json  package.json  preload.js  terminalPolicy.js  tsconfig.json  vite.config.mts  vite.config.ts
(+83 files in other folders)
