[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deskassist"
version = "0.1.0"
description = "Workspace-first IDE and personal assistant built around the casefile model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff",
  "vulture",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "RUF100",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80
sort_by_size = true
